--- a/electron/index.html
+++ b/electron/index.html
@@ -21,7 +21,7 @@
     </ul>
 
     <div class="tab-content">
-      <div id="efficient" class="tab-pane active">
+      <div id="efficient" class="container tab-pane">
         <!-- Practice Files -->
         <div class="row">
           <div class="form-group col-xs-6">
@@ -62,13 +62,13 @@
               <input id="star-select" name="switch-checkbox" type="checkbox" checked>
               <i data-swoff-text="OFF" data-swon-text="ON"></i>Star Select
           </label>
-          <div id="thi-behavior" class="row">
-            <label class="radio control-label col-xs-offset-1 col-xs-6">THI Star Select Behavior</label>
+          <div id="thi-behavior" class="padded-row">
+            <label class="control-label col-xs-offset-1 col-xs-6">THI Star Select Behavior</label>
             <div class="btn-group" data-toggle="buttons">
-              <label class="btn btn-primary active">
+              <label class="btn btn-default btn-xs active">
                 <input type="radio" name="options" id="tiny-island" autocomplete="off" checked>Tiny
               </label>
-              <label class="btn btn-primary">
+              <label class="btn btn-default btn-xs">
                 <input type="radio" name="options" id="huge-island">Huge
               </label>
             </div>
@@ -83,7 +83,7 @@
           </label>
         </form>
       </div>
-      <div id="timer" class="tab-pane">
+      <div id="timer" class="container tab-pane">
         <form>
           <label class="switch-input">
             <input id="timer" name="switch-checkbox" type="checkbox" checked>
@@ -97,34 +97,34 @@
             <input id="timer-centiseconds" name="switch-checkbox" type="checkbox" checked>
             <i data-swoff-text="OFF" data-swon-text="ON"></i>Show Centiseconds
           </label>
-          <div id="show-timer" class="row">
-            <label class="radio control-label col-xs-4">Show timer</label>
+          <div id="show-timer" class="padded-row row">
+            <label class="control-label col-xs-4">Show timer</label>
             <div class="btn-group col-xs-8" data-toggle="buttons">
-              <label class="btn btn-primary pull-right">
+              <label class="btn btn-default btn-xs pull-right">
                 <input type="radio" name="options" id="show-always" checked>Always
               </label>
-              <label class="btn btn-primary active pull-right">
+              <label class="btn btn-default btn-xs active pull-right">
                 <input type="radio" name="options" id="show-x-cam" checked>X-Cam
               </label>
-              <label class="btn btn-primary pull-right">
+              <label class="btn btn-default btn-xs pull-right">
                 <input type="radio" name="options" id="show-star-grab">Star Grab
               </label>
             </div>
           </div>
-          <div id="stop-timer" class="row">
-            <label class="radio control-label col-xs-6">Stop Timer</label>
+          <div id="stop-timer" class="padded-row row">
+            <label class="control-label col-xs-6">Stop Timer</label>
             <div class="btn-group col-xs-6" data-toggle="buttons">
-              <label class="btn btn-primary active pull-right">
+              <label class="btn btn-default btn-xs active pull-right">
                 <input type="radio" name="options" id="stop-x-cam" checked>X-Cam
               </label>
-              <label class="btn btn-primary pull-right">
+              <label class="btn btn-default btn-xs pull-right">
                 <input type="radio" name="options" id="stop-star-grab">Star Grab
               </label>
             </div>
           </div>
         </form>
       </div>
-      <div id="hud" class="tab-pane">
+      <div id="hud" class="container tab-pane">
         <form>
           <label class="switch-input">
             <input id="lag-counter" name="switch-checkbox" type="checkbox" checked>
@@ -144,7 +144,7 @@
           </label>
         </form>
       </div>
-      <div id="cosmetic" class="tab-pane">
+      <div id="cosmetic" class="container tab-pane active">
         <form>
           <label class="switch-input">
             <input id="music" name="switch-checkbox" type="checkbox">
@@ -154,9 +154,15 @@
             <input id="unobtained-stars" name="switch-checkbox" type="checkbox" checked>
             <i data-swoff-text="OFF" data-swon-text="ON"></i>Stars Appear Unobtained
           </label>
+          <div class="row padded-row">
+              <label class="control-label col-xs-6">Custom Star Color:</label>
+              <div class="col-xs-6">
+                <input id="star-color" type="color" class="form-control pull-right">
+              </div>
+          </div>
         </form>
       </div>
-      <div id="misc" class="tab-pane">
+      <div id="misc" class="container tab-pane">
         <form>
           <label class="switch-input">
             <input id="soft-reset" name="switch-checkbox" type="checkbox" checked>
@@ -201,5 +207,6 @@
         </form>
       </div>
     </div>
+
   </body>
 </html>
