--- a/electron/index.html
+++ b/electron/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-      <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+      <script src="node_modules/jquery/dist/jquery.js"></script>
+      <script src="node_modules/jquery/dist/jquery.js"></script>
+      <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+      <script src="node_modules/bootstrap-colorpicker/dist/js/bootstrap-colorpicker.js"></script>
       <script src="src/js/index.js"></script>
       
-      <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+      <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+      <link href="node_modules/bootstrap-colorpicker/dist/css/bootstrap-colorpicker.css" rel="stylesheet">
       <link href="src/css/bootstrap-flat.min.css" rel="stylesheet">
       <link href="src/css/bootstrap-flat-extras.min.css" rel="stylesheet">
       <link href="src/css/practice-rom-patcher.css" rel="stylesheet">
@@ -21,7 +23,7 @@
     </ul>
 
     <div class="tab-content">
-      <div id="efficient" class="container tab-pane">
+      <div id="efficient" class="container tab-pane active">
         <!-- Practice Files -->
         <div class="row">
           <div class="form-group col-xs-6">
@@ -62,14 +64,14 @@
               <input id="star-select" name="switch-checkbox" type="checkbox" checked>
               <i data-swoff-text="OFF" data-swon-text="ON"></i>Star Select
           </label>
-          <div id="thi-behavior" class="padded-row">
+          <div class="padded-row">
             <label class="control-label col-xs-offset-1 col-xs-6">THI Star Select Behavior</label>
             <div class="btn-group" data-toggle="buttons">
               <label class="btn btn-default btn-xs active">
-                <input type="radio" name="options" id="tiny-island" autocomplete="off" checked>Tiny
+                <input type="radio" name="thi-behavior" value="tiny" checked>Tiny
               </label>
               <label class="btn btn-default btn-xs">
-                <input type="radio" name="options" id="huge-island">Huge
+                <input type="radio" name="thi-behavior" value="huge">Huge
               </label>
             </div>
           </div>
@@ -97,28 +99,28 @@
             <input id="timer-centiseconds" name="switch-checkbox" type="checkbox" checked>
             <i data-swoff-text="OFF" data-swon-text="ON"></i>Show Centiseconds
           </label>
-          <div id="show-timer" class="padded-row row">
+          <div class="padded-row row">
             <label class="control-label col-xs-4">Show timer</label>
             <div class="btn-group col-xs-8" data-toggle="buttons">
               <label class="btn btn-default btn-xs pull-right">
-                <input type="radio" name="options" id="show-always" checked>Always
+                <input type="radio" name="show-timer" id="show-always" value="always">Always
               </label>
               <label class="btn btn-default btn-xs active pull-right">
-                <input type="radio" name="options" id="show-x-cam" checked>X-Cam
+                <input type="radio" name="show-timer" id="show-x-cam" value="x-cam" checked>X-Cam
               </label>
               <label class="btn btn-default btn-xs pull-right">
-                <input type="radio" name="options" id="show-star-grab">Star Grab
+                <input type="radio" name="show-timer" id="show-star-grab" value="star-grab">Star Grab
               </label>
             </div>
           </div>
-          <div id="stop-timer" class="padded-row row">
+          <div class="padded-row row">
             <label class="control-label col-xs-6">Stop Timer</label>
             <div class="btn-group col-xs-6" data-toggle="buttons">
               <label class="btn btn-default btn-xs active pull-right">
-                <input type="radio" name="options" id="stop-x-cam" checked>X-Cam
+                <input type="radio" name="stop-timer" id="stop-x-cam" value="x-cam" checked>X-Cam
               </label>
               <label class="btn btn-default btn-xs pull-right">
-                <input type="radio" name="options" id="stop-star-grab">Star Grab
+                <input type="radio" name="stop-timer" id="stop-star-grab" value="star-grab">Star Grab
               </label>
             </div>
           </div>
@@ -144,7 +146,7 @@
           </label>
         </form>
       </div>
-      <div id="cosmetic" class="container tab-pane active">
+      <div id="cosmetic" class="container tab-pane">
         <form>
           <label class="switch-input">
             <input id="music" name="switch-checkbox" type="checkbox">
@@ -154,10 +156,11 @@
             <input id="unobtained-stars" name="switch-checkbox" type="checkbox" checked>
             <i data-swoff-text="OFF" data-swon-text="ON"></i>Stars Appear Unobtained
           </label>
-          <div class="row padded-row">
-              <label class="control-label col-xs-6">Custom Star Color:</label>
-              <div class="col-xs-6">
-                <input id="star-color" type="color" class="form-control pull-right">
+          <div class="row padded-row colorpicker-row">
+              <label for="star-color" class="col-xs-6">Custom Star Color:</label>
+              <div id="star-color" class="input-group colorpicker-component col-xs-6">
+                <input type="text" class="form-control input-sm" value="rgb(128, 128, 128)">
+                <span class="input-group-addon"><i></i></span>
               </div>
           </div>
         </form>
@@ -207,6 +210,8 @@
         </form>
       </div>
     </div>
-
+    <div class="footer navbar-fixed-bottom">
+      <button id="patch-button" type="button" class="btn btn-primary btn-lg">Patch</button>
+    </div>
   </body>
 </html>
