--- a/electron/index.html
+++ b/electron/index.html
@@ -21,7 +21,7 @@
     </ul>
 
     <div class="tab-content">
-      <div id="efficient" class="container tab-pane">
+      <div id="efficient" class="container tab-pane active">
         <!-- Practice Files -->
         <div class="row">
           <div class="form-group col-xs-6">
@@ -62,17 +62,10 @@
               <input id="star-select" name="switch-checkbox" type="checkbox" checked>
               <i data-swoff-text="OFF" data-swon-text="ON"></i>Star Select
           </label>
-          <div id="thi-behavior" class="padded-row">
-            <label class="control-label col-xs-offset-1 col-xs-6">THI Star Select Behavior</label>
-            <div class="btn-group" data-toggle="buttons">
-              <label class="btn btn-default btn-xs active">
-                <input type="radio" name="options" id="tiny-island" autocomplete="off" checked>Tiny
-              </label>
-              <label class="btn btn-default btn-xs">
-                <input type="radio" name="options" id="huge-island">Huge
-              </label>
-            </div>
-          </div>
+          <label class="switch-input switch-input-flat switch-input-lg">
+              <input id="thi-behavior" name="switch-checkbox" type="checkbox" checked>
+              <i data-swoff-text="HUGE" data-swon-text="TINY"></i>THI Star Select Behavior
+          </label>
           <label class="switch-input">
               <input id="savestates" name="switch-checkbox" type="checkbox" checked>
               <i data-swoff-text="OFF" data-swon-text="ON"></i>Savestates 3.0
@@ -97,31 +90,18 @@
             <input id="timer-centiseconds" name="switch-checkbox" type="checkbox" checked>
             <i data-swoff-text="OFF" data-swon-text="ON"></i>Show Centiseconds
           </label>
-          <div id="show-timer" class="padded-row row">
-            <label class="control-label col-xs-4">Show timer</label>
-            <div class="btn-group col-xs-8" data-toggle="buttons">
-              <label class="btn btn-default btn-xs pull-right">
-                <input type="radio" name="options" id="show-always" checked>Always
-              </label>
-              <label class="btn btn-default btn-xs active pull-right">
-                <input type="radio" name="options" id="show-x-cam" checked>X-Cam
-              </label>
-              <label class="btn btn-default btn-xs pull-right">
-                <input type="radio" name="options" id="show-star-grab">Star Grab
-              </label>
-            </div>
-          </div>
-          <div id="stop-timer" class="padded-row row">
-            <label class="control-label col-xs-6">Stop Timer</label>
-            <div class="btn-group col-xs-6" data-toggle="buttons">
-              <label class="btn btn-default btn-xs active pull-right">
-                <input type="radio" name="options" id="stop-x-cam" checked>X-Cam
-              </label>
-              <label class="btn btn-default btn-xs pull-right">
-                <input type="radio" name="options" id="stop-star-grab">Star Grab
-              </label>
-            </div>
-          </div>
+          <label class="switch-input">
+            <input id="timer-always" name="switch-checkbox" type="checkbox">
+            <i data-swoff-text="OFF" data-swon-text="ON"></i>Show Timer Always
+          </label>
+          <label class="switch-input switch-input-flat switch-input-xl">
+            <input id="stop-timer" name="switch-checkbox" type="checkbox" checked>
+            <i data-swoff-text="STAR GRAB" data-swon-text="X-CAM"></i>Stop Timer
+          </label>
+          <label class="switch-input switch-input-flat switch-input-xl">
+            <input id="show-timer" name="switch-checkbox" type="checkbox" checked>
+            <i data-swoff-text="STAR GRAB" data-swon-text="X-CAM"></i>Show Timer
+          </label>
         </form>
       </div>
       <div id="hud" class="container tab-pane">
@@ -144,7 +124,7 @@
           </label>
         </form>
       </div>
-      <div id="cosmetic" class="container tab-pane active">
+      <div id="cosmetic" class="container tab-pane">
         <form>
           <label class="switch-input">
             <input id="music" name="switch-checkbox" type="checkbox">
