options show/hide depending on whether they matter

--- a/electron/index.html
+++ b/electron/index.html
@@ -81,7 +81,7 @@
       <div id="timer" class="container tab-pane">
         <form>
           <label class="switch-input">
-            <input id="timer" name="switch-checkbox" type="checkbox" checked>
+            <input id="timer-on" name="switch-checkbox" type="checkbox" checked>
             <i data-swoff-text="OFF" data-swon-text="ON"></i>Timer
           </label>
           <label class="switch-input">
